--- a/benchmark/misspellings_and_typos.asciidoc
+++ b/benchmark/misspellings_and_typos.asciidoc
@@ -102,17 +102,17 @@ this is the only reason why both of them were included in this benchmark.].
 ====
 
 === Reproduction
-In order to reproduce results of this benchmarks you should put link:https://github.com/dkulagin/kartaslov/blob/master/dataset/orfo_and_typos/orfo_and_typos.L1_5%2BPHON.csv[orfo_and_typos.L1_5+PHON.csv]
-file under the `benchmark/src/main/resources` directory and run the following:
+In order to reproduce the results of this benchmarks you should put link:https://github.com/dkulagin/kartaslov/blob/master/dataset/orfo_and_typos/orfo_and_typos.L1_5%2BPHON.csv[orfo_and_typos.L1_5+PHON.csv]
+file under the `*benchmark/src/main/resources*` directory and run the following:
 
 [source,intent=0]
 ----
 ./gradlew benchmark:run -Ptype='misspellings_and_typos'
 ----
 
-This command will create data file under the `benchmark/assets/misspellings_and_typos` directory. You can use `gnuplot` to generate the plot.
+This command will create data file under the `*benchmark/assets/misspellings_and_typos*` directory. You can use `*gnuplot*` to generate the plot.
 
-In order to install `gnuplot` on MacOS use the following:
+In order to install `*gnuplot*` on MacOS use the following:
 
 [source,intent=0]
 ----
@@ -126,7 +126,7 @@ The plot can be generated with the following command running inside a directory 
 gnuplot histogram.plot
 ----
 
-The script file for plot generation is located under the `benchmark/assets/misspellings_and_typos` directory.
+The script file for plot generation is located under the `*benchmark/assets/misspellings_and_typos*` directory.
 
 
 == Benchmark Results
