--- a/benchmark/distribution.asciidoc
+++ b/benchmark/distribution.asciidoc
@@ -93,10 +93,10 @@ vowels: `*encode_all*` +
 enable_stemmer: `*true*`
 |*BMCyrillic* |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl,Implementation provided by link:https://lucene.apache.org/[Apache Lucene] with commons-codec:1.0.]
 |languageset: `*cyrillic*` +
-maxPhonemes: `*1*`
+max_phonemes: `*1*`
 |*BMRussian* |link:https://stevemorse.org/phonetics/bmpm.htm[Beider-Morse]footnoteref:[luceneImpl]
 |languageset: `*russian*` +
-maxPhonemes: `*1*`
+max_phonemes: `*1*`
 |*Metaphone* |link:https://en.wikipedia.org/wiki/Metaphone[Metaphone]footnoteref:[luceneImpl] | max_code_len `in [*4*, *14*]`
 |*Soundex* |link:https://en.wikipedia.org/wiki/Soundex[Soundex]footnoteref:[luceneImpl] | -
 |=========================================================
@@ -139,7 +139,7 @@ $ gnuplot dictionary.plot
 ----
 
 All scripts required for plot generation are located under the `*benchmark/assets*` directory.
-In order to install `gnuplot` on MacOS use the following:
+In order to install `*gnuplot*` on MacOS use the following:
 
 [source,sh]
 ----
